--- a/index.html
+++ b/index.html
@@ -339,12 +339,12 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				<div class="games-item desktop">
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
-				            <a href="./game/football-bros.html">
-				                <img src="assets/img/football-bros/football-bros.webp" alt="Football Bros" title="Football Bros" />
+				            <a href="./game/level-devil.html">
+				                <img src="assets/img/level-devil/level-devil.webp" alt="Level devil" title="Level devil" />
 				            </a>
 				        </div>
 				        <div class="games-desc">
-				            <h2><a href="./game/football-bros.html">Football Bros</a></h2>
+				            <h2><a href="./game/level-devil.html">Level devil</a></h2>
 				            <p class="game-meta">Sport | Desktop | 2 Player games</p>
 				        </div>
 				    </div>
@@ -389,6 +389,21 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				        <div class="games-desc">
 				            <h2><a href="./game/0-granny.html">Granny Game</a></h2>
 				            <p class="game-meta">Survival | Desktop | Horror</p>
+				        </div>
+				    </div>
+				</div>
+				<!-- end game item -->
+								   				       <!-- start game item -->
+				<div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="./game/football-bros.html">
+				                <img src="assets/img/football-bros/football-bros.webp" alt="Football Bros" title="Football Bros" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h2><a href="./game/football-bros.html">Football Bros</a></h2>
+				            <p class="game-meta">Sport | Desktop | 2 Player games</p>
 				        </div>
 				    </div>
 				</div>
