--- a/game/level-devil.html
+++ b/game/level-devil.html
@@ -7,12 +7,12 @@
         <title>Level Devil Unblocked: Play Online for Free | FAF Games</title>
         <meta name="description" content=" Level Devil is a tricky platform game full of hidden traps and surprises. Jump, dodge, and survive each level to win. Play free online anytime without downloads.">
             
-        <meta name="title" content=" level Devil, Level Devil game, Level Devil platformer, Unept Level Devil, Level Devil 2D platformer, Level Devil PC, Level Devil gameplay, Level Devil unblocked, Level Devil offline, Level Devil challenges, Level Devil tricks, Level Devil levels, Level Devil release, difficult platformer, unpredictable platformer">
+        <meta name="keywords" content="level devil, Level Devil game, Level Devil platformer, Unept Level Devil, Level Devil 2D platformer, Level Devil PC, Level Devil gameplay, Level Devil unblocked, Level Devil offline, Level Devil challenges, Level Devil tricks, Level Devil levels, Level Devil release, difficult platformer, unpredictable platformer">
 
         <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/level-devil.html" />
-	      <meta name="publisher" content="FAF Games Team">
-	      <meta name="robots" content="index, follow">
+	    <meta name="publisher" content="FAF Games Team">
+	    <meta name="robots" content="index, follow">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
