--- a/game/level-devil.html
+++ b/game/level-devil.html
@@ -476,7 +476,7 @@
     <h2>Related Games</h2>
     <ul>
       <li><a href="https://faf-games.github.io/game/vex-7.html">Vex 7</a></li>
-      <li><a href="https://faf-games.github.io/game/geometry-dash.html">Geometry Dash</a></li>
+      <li><a href="https://faf-games.github.io/game/geometry-dash-lite.html">Geometry Dash Lite</a></li>
     </ul>
   </div>
 
