--- a/game/level-devil.html
+++ b/game/level-devil.html
@@ -429,7 +429,7 @@
 
   <div class="dark-theme section">
     <h2>About</h2>
-    <p><strong>Level Devil</strong> is a tricky platformer game that challenges your reflexes, memory, and patience. At first, it looks like a simple level-based platform game, but every stage is full of unexpected traps, disappearing floors, and tricky surprises. This <strong>Level Devil unblocked</strong> version can be played directly in your browser, making it perfect for school or work breaks. If you love unpredictable challenges, Level Devil will keep you on your toes. Enjoy one of the most unique <a href="https://faf-games.github.io" target="_blank">unblocked games</a> and see if you can make it to the end without losing your cool.</p>
+    <p><strong>Level Devil</strong> is a tricky platformer game that challenges your reflexes, memory, and patience. At first, it looks like a simple level-based platform game, but every stage is full of unexpected traps, disappearing floors, and tricky surprises. This <strong>Level Devil unblocked</strong> version can be played directly in your browser, making it perfect for school or work breaks. If you love unpredictable challenges, Level Devil, not a troll game. Enjoy one of the most Popular <a href="https://faf-games.github.io" target="_blank">unblocked games</a> and see if you can make it to the end without losing your cool.</p>
   </div>
 
   <div class="dark-theme section">
