--- a/index.html
+++ b/index.html
@@ -573,6 +573,21 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
         </div>
     </div>
     <!-- end game item -->
+								   <!-- end game item -->
+                          <div class="games-item desktop">
+                              <div class="games-single-item img-contain-isotope">
+                                  <div class="games-thumb">
+                                          <a href="../game/geometry-dash-lite.html">
+                                              <img src="../assets/img/geometry-dash-lite/geometry-dash-lite.webp" alt="Geometry Dash Lite" />
+                                          </a>
+                                  </div>
+                                  <div class="games-desc">
+                                      <h3><a href="../game/geometry-dash-lite.html">Geometry Dash Lite</a></h3>
+                                      <p class="game-meta">Adventure | Desktop | Mobile</p>
+                                  </div>
+                              </div>
+                          </div>
+                          <!-- end game item -->
 
     <!-- start game item -->
     <div class="games-item desktop">
