--- a/game/geometry-dash-lite.html
+++ b/game/geometry-dash-lite.html
@@ -9,20 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Geometry Dash Lite: Play Online for Free | FAF Games</title>
-    <meta name="description" content="Geometry Dash Lite is a fast-paced rhythm platformer where you jump and fly through challenging levels. Play free online, test your reflexes, and enjoy the music.">
-    
-    <meta name="keywords" content="Vex 5 Game, 
-    Adventure Games, AdventureGames, Adventure Games Pc, AdventureGamesPc, 
-    Adventure Games Online, 
-    AdventureGamesOnline, Adventure Games Free, AdventureGamesFree">
-    <meta name="news_keywords" content="vex 5 unblocked
-    vex 5 extension
-    vex 5 download
-    vex 5 unblocked 66
-    vex 5 -- yandex
-    vex 5 y8
-    vex 5 6
-    vex 5 crazy games">
+    <meta name="description" content=" Geometry Dash Lite is a fast-paced rhythm platformer where you jump and fly through challenging levels. Play free online, test your reflexes, and enjoy the music.">
+    <meta name="keywords" content="geometry dash lite, Geometry Dash Lite game, Geometry Dash Lite online, Geometry Dash Lite play, Geometry Dash Lite download, Geometry Dash Lite unblocked, Geometry Dash Lite free, Geometry Dash Lite PC, Geometry Dash Lite levels, Geometry Dash Lite challenges, Geometry Dash Lite music, Geometry Dash Lite gameplay, Geometry Dash Lite tips, Geometry Dash Lite platformer, Geometry Dash Lite speedrun">
+
     <meta name="author" content="FAF Games Team">
     <link rel="canonical" href="/game/geometry-dash-lite.html" />
     <!-- Favicon -->
