--- a/game/level-devil.html
+++ b/game/level-devil.html
@@ -454,7 +454,7 @@
   <div class="dark-theme section">
     <h2>Game Information</h2>
     <ul>
-      <li><strong>Developer:</strong> Independent Developer</li>
+      <li><strong>Developer:</strong> Unept</li>
       <li><strong>Genre:</strong> Platformer / Puzzle</li>
       <li><strong>Players:</strong> Single Player</li>
       <li><strong>Release Date:</strong> 2023</li>
