--- a/game/level-devil.html
+++ b/game/level-devil.html
@@ -13,6 +13,8 @@
         <link rel="canonical" href="/game/level-devil.html" />
 	    <meta name="publisher" content="FAF Games Team">
 	    <meta name="robots" content="index, follow">
+		<meta property="og:image" content="https://faf-games.github.io/assets/img/level-devil/level-devil.png">
+
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
