--- a/game/geometry-dash-lite.html
+++ b/game/geometry-dash-lite.html
@@ -11,6 +11,7 @@
     <title>Geometry Dash Lite: Play Online for Free | FAF Games</title>
     <meta name="description" content=" Geometry Dash Lite is a fast-paced rhythm platformer where you jump and fly through challenging levels. Play free online, test your reflexes, and enjoy the music.">
     <meta name="keywords" content="geometry dash lite, Geometry Dash Lite game, Geometry Dash Lite online, Geometry Dash Lite play, Geometry Dash Lite download, Geometry Dash Lite unblocked, Geometry Dash Lite free, Geometry Dash Lite PC, Geometry Dash Lite levels, Geometry Dash Lite challenges, Geometry Dash Lite music, Geometry Dash Lite gameplay, Geometry Dash Lite tips, Geometry Dash Lite platformer, Geometry Dash Lite speedrun">
+	<meta property="og:image" content="https://faf-games.github.io/assets/img/geometry-dash-lite/geometry-dash-lite.webp">
 
     <meta name="author" content="FAF Games Team">
     <link rel="canonical" href="/game/geometry-dash-lite.html" />
