--- a/game/level-devil.html
+++ b/game/level-devil.html
@@ -463,6 +463,11 @@
       <li><strong>Build:</strong> HTML5</li>
     </ul>
   </div>
+					   <div class="dark-theme section">
+    <h2>Live Demo from the Developer</h2>
+    <p>Want to see how the developer themselves plays <strong>Level Devil</strong>? Check out the official live gameplay here:</p>
+    <p><a href="https://store.steampowered.com/developer/unept/?l=tchinese" target="_blank"><strong>🎥 Watch the Live Demo on Steam</strong></a></p>
+  </div>
 
   <div class="dark-theme section">
     <h2>Game Objective</h2>
