--- a/classroom6x/index.html
+++ b/classroom6x/index.html
@@ -13,7 +13,7 @@
 	<meta name="publisher" content="FAF Games Team">
 	 <link rel="canonical" href="/classroom6x/index.html" />
     <!-- Title -->
-    <title>Classroom 6x | Play Unblocked Games At FAF Games</title>
+    <title>Classroom 6x - Play Online For Free | FAF Games</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
@@ -1185,7 +1185,7 @@
                     </div>
 
 			    <section>
-      <h2>What is 6x?</h2>
+      <h2>Classroom 6x</h2>
       <p>
         Ever stumbled across the term <b>6x</b> and wondered, “Alright, what’s the deal here?” You are not alone. These days, <b>6x</b> is buzzing all over student forums and gaming sites, mostly because of <b>Classroom 6x</b>, a hidden gem for students itching to play <b>unblocked games</b> when the school firewall has other plans.
       </p>
@@ -1195,7 +1195,7 @@
     </section>
 
     <section>
-      <h2>Why is 6x So Popular?</h2>
+      <h2>Why is Classroom 6x So Popular?</h2>
       <p>
         Not to beat around the bush, but the main reason <a href="https://faf-games.github.io" target="_blank"><b>6x</b></a> sites like <b>Classroom 6x</b> have exploded in popularity? Two words: <b>Unblocked games</b>. When lunchtime rolls around and students want a quick break, there’s nothing worse than a blocked site. That’s where these 6x sites swoop in—no fuss, just instant fun.
       </p>
@@ -1205,9 +1205,9 @@
     </section>
 
     <section>
-      <h2>Classroom 6x: More Than Just Games</h2>
+      <h2>Classroom 6x More Than Just Games</h2>
       <p>
-        Sure, everyone’s after the games—but <a href="https://faf-games.github.io" target="_blank"><b>Classroom 6x</b></a> isn’t just for sneaking in a round of <a href="https://faf-games.github.io/game/slope.html" target="_blank"><b>Slope</b></a> or Minecraft. It can be a powerful hub for quick access to learning tools, classroom resources, and even productivity apps, if you know where to look.
+        Sure, everyone after the games but <a href="https://faf-games.github.io" target="_blank"><b>Classroom 6x</b></a> isn’t just for sneaking in a round of <a href="https://faf-games.github.io/game/slope.html" target="_blank"><b>Slope</b></a> or Minecraft. It can be a powerful hub for quick access to learning tools, classroom resources, and even productivity apps, if you know where to look.
       </p>
       <p>
         Tired of wading through endless ads and pop-ups? Looking for sites that actually keep your data private? We’ve sifted through the noise to highlight only what matters.
