--- a/index.html
+++ b/index.html
@@ -1253,7 +1253,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
     </p>
     
     <h2>Top 12 Unblocked Games on FAF Games</h2>
-    <p>Looking for the best unblocked games to play on FAF Games, here is a list of the top 12 most popular Unblocked games premium that will keep you entertained:</p>
+    <p>Looking for the best unblocked games for Chromebook, here is a list of the top 12 most popular Unblocked games premium that will keep you entertained:</p>
     
     <ol>
         <li><a href="https://faf-games.github.io/game/drift-hunters.html" target="_blank">Drift Hunters</a> – A wild driving game where you navigate through tricky courses filled with obstacles, requiring careful balance and speed to avoid crashes and reach the finish line.</li><br>
