--- a/game/iron-snout-2.html
+++ b/game/iron-snout-2.html
@@ -810,7 +810,7 @@
                                  <h3>About us</h3>
                                  <p>Moreover, they ban certain gaming websites and utilize internet filters to restrict others. <br>All gaming sites are blocked by these filters.<br>
                                      Even though it takes a long time, <br>some gaming websites will get unblocked since it is difficult to prohibit every website on the internet, <br>
-                                     and because <a href="https://faf-games.github.io">FAF GAME</a> websites are less likely to be blocked.</p>
+                                     and because <a href="https://faf-games.github.io">FAF Games</a> websites are less likely to be blocked.</p>
                              </div>
                          </div>
                          <div class="col-lg-5 col-md-6 col-sm-12">
@@ -882,7 +882,7 @@
                                      </ul>
                                  </div>
                                  <div class="copyright">
-                                     <p>&copy; Copyrights 2020 FAF GAMES - All Rights Reserved</p>
+                                     <p>&copy; Copyrights 2025 FAF GAMES - All Rights Reserved</p>
                                  </div>
                              </div>
                          </div>
@@ -913,7 +913,7 @@
     <script>
         function loadMainGame()
         {
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://webglmath.github.io/iron-snout-2/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://iron-snout.gitlab.io/file/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
         }
