--- a/game/iron-snout-2.html
+++ b/game/iron-snout-2.html
@@ -21,10 +21,12 @@
         iron snout game
         iron snout crazy games
         bacon may die">
-       <meta name="author" content="FAF Games Team">
+        <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/iron-snout-2.html" />
-	<meta name="publisher" content="FAF Games Team">
-	<meta name="robots" content="index, follow">
+	    <meta name="publisher" content="FAF Games Team">
+	    <meta name="robots" content="index, follow">
+		<meta property="og:image" content="https://faf-games.github.io/img/ironsnout2/iron-snout-2.png">
+
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
