--- a/game/iron-snout.html
+++ b/game/iron-snout.html
@@ -23,8 +23,10 @@
          iron snout crazy games">
          <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/iron-snout.html" />
-	<meta name="publisher" content="FAF Games Team">
-	<meta name="robots" content="index, follow">
+	    <meta name="publisher" content="FAF Games Team">
+	    <meta name="robots" content="index, follow">
+ 		<meta property="og:image" content="https://faf-games.github.io/img/ironsnout/iron-snout.png">
+
          <!-- Favicon -->
          <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
          <!--Bootstrap css-->
