--- a/game/idle-breakout.html
+++ b/game/idle-breakout.html
@@ -19,9 +19,11 @@
                Idle Breakout classic
                Idle Breakout unblocked at school">
                 <meta name="author" content="FAF Games Team">
-		<meta name="publisher" content="FAF Games Team">
-		<meta name="robots" content="index, follow">
+		        <meta name="publisher" content="FAF Games Team">
+		        <meta name="robots" content="index, follow">
                 <link rel="canonical" href="/game/idle-breakout.html" />
+				<meta property="og:image" content="https://faf-games.github.io/img/idlebreakout/idle-breakout.png">
+
                 <!-- Favicon -->
                 <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
                 <!--Bootstrap css-->
