--- a/game/moto-x3m-2.html
+++ b/game/moto-x3m-2.html
@@ -20,8 +20,10 @@
         moto x3m 5">
         <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/moto-x3m-2.html" />
-	<meta name="publisher" content="FAF Games Team">
-	<meta name="robots" content="index, follow">
+	    <meta name="publisher" content="FAF Games Team">
+     	<meta name="robots" content="index, follow">
+		<meta property="og:image" content="https://faf-games.github.io/img/moto3mx/moto-x3m-2.png">
+
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
