--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>1v1.lol - Play Online for Free | FAF Games</title>
+        <title>1v1.lol | FAF Games</title>
         <meta name="description" content="1v1.lol is a fast-paced shooter where you build and fight in real time. Play official battle royale, box fights, and more—no download needed!">
         <meta name="title" content="1v1.LOL">
         <meta name="keywords" content="1v1 lol unblocked, 1v1 sites, 1v1unblocked, lol.1v1 unblocked, 1v1 lol sites, 1v1. lol unblocked, 1vs1 lol unblocked, v1.lol unblocked google sites, 1v1 lol google sites, lol 1v1 unblocked, 1v1 lol unblocked 66, 1v1 lol unblocked games, 1v1lol unblocked, 1v1 unblocked, 1v1.lol unblocked games, 1v1.unblocked, https //1v1.lol unblocked, 1v1.lol unblocked 77, 1v1lolunblocked, 1v1 tennis unblocked, 1v1 sites">
