--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1146,112 +1146,77 @@ dl dd {
                   </div>
 
 <article>
-    <p>1v1.lol is where the real action begins! This competitive online third-person shooter isn’t just about sharp aim. It is about building fast and thinking on your feet. In every match, you’ll be dropping ramps, walls, and platforms, trying to outplay and outlast your rival.
+<article class="game-article">
+  <h1>1v1 LOL</h1>
+  <p><strong>1v1 lol</strong> is a fast-paced third-person shooter mixed with building mechanics, where you face off against players in intense 1v1 battles. Known for its quick action and strategic building, <strong>1v1.lol</strong> has become one of the most popular <em>unblocked games</em> at school, work, or anywhere. You can even play <strong>1v1 lol unblocked</strong> versions such as <em>1v1.lol unblocked 6x</em>, <em>1v1.lol unblocked 76</em>, and <em>1v1.lol unblocked 66</em>.</p>
 
-The main event? The 1v1 battle royale. Two players enter, but only one can claim victory as the last player standing. With every round, you will face fresh opponents and new challenges, so there’s never a dull moment.
+  <h2>How to Play 1v1 LOL</h2>
+  <p>To win in <strong>1v1.lol</strong>, you must outsmart your opponent by shooting, building, and surviving. Players can construct walls, ramps, and platforms to defend themselves or gain the upper hand. With reflexes and strategy, every match feels unique. You can also try <em>unblocked 1v1 lol</em> or access it directly from <em>1v1 lol github</em> links if you’re on restricted networks.</p>
 
-If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol is the place to be. Jump in, build your defense, and fight for the top spot. Who’s going to win this round? Only one way to find out!</p>
-<p>
-   Looking for the original? <a href="https://faf-games.github.io/game/1v1-lol-unblocked.html">1v1.lol</a>. Click here to play the Official version.
-</p>
-  <section>
-    <h2>What is 1v1.lol and Why is It So Addictive?</h2>
-    <p>
-      <b>1v1.lol</b> is more than just another shooter, it is a quick-fire battle of wits, reflexes, and building skills. Imagine Fortnite’s building and shooting mechanics, but boiled down to their purest, fastest form. The best part? Games are short, matches are intense, and you’re always one clever move away from victory or defeat.
-    </p>
-    <p>
-      Whether you are outsmarting opponents with walls and ramps or out-aiming them in a split-second shootout, every round’s a fresh chance to show what you’re made of. No wonder students and casual gamers alike keep coming back for more.
-    </p>
-  </section>
+  <h2>Shoot and Build</h2>
+  <p>The game mixes precise shooting with tactical building. Similar to battle royale games, you’ll need to quickly place structures to shield yourself from attacks. Whether you play <em>1v1lol</em> casually or go competitive, learning to balance shooting and building is the key to victory.</p>
 
-  <section>
-    <h2>How to Play 1v1.lol (Even When It is Blocked!)</h2>
-    <p>
-      Getting started with <b>1v1.lol unblocked</b> is a breeze even if your school or work network’s got tough rules. Here’s how most US players do it:
-    </p>
-    <ol>
-      <li>
-        <b>Search “1v1.lol unblocked” on Google</b> – You will find sites like <a href="https://faf-games.github.io" target="_blank">FAF Games</a> Github that let you play straight from your browser, no downloads, no sign-ups.
-      </li>
-      <li>
-        <b>Choose a trusted unblocked games site</b> – Look for quick loading times, no weird pop-ups, and a clean interface. If your favorite site goes down, just try another mirror. There are tons out there.
-      </li>
-      <li>
-        <b>Jump into a match</b> – Pick from game modes like classic 1v1, 2v2 box fights, practice, or even custom matches. You don’t need to create an account unless you want to save your stats.
-      </li>
-    </ol>
-    <p>
-      Pro tip: Got trouble loading the game? Try clearing your browser cache, switching devices, or connecting at home. School networks can be tricky, but where there’s a will, there’s a way!
-    </p>
-  </section>
+  <h2>Be Tactical and Think Fast</h2>
+  <p>Timing is everything in <strong>1v1</strong> battles. Reacting quickly with the right builds or hitting a perfect shot can make or break your match. That’s why so many students prefer playing <em>unblocked games 1v1 lol</em> during school breaks—it’s quick, intense, and loads of fun.</p>
 
-  <section>
-    <h2>Game Modes – There is More Than Meets the Eye</h2>
-    <p>
-      What keeps 1v1.lol so fresh? It is all about the variety:
-    </p>
-    <ul>
-      <li><b>Classic 1v1</b> – A true test of solo skills. Outbuild and outshoot your rival.</li>
-      <li><b>Box 2v2</b> – Team up and take on another pair in tactical showdowns.</li>
-      <li><b>Battle Royale</b> – Survive till the end in a multi-player free for all. Last one standing wins!</li>
-      <li><b>JustBuild</b> – Want to practice building without the stress? This mode is for you.</li>
-      <li><b>Aim Trainer</b> – Hone your shot with a dedicated mode built for improvement.</li>
-      <li><b>Party Mode</b> – Play private matches with friends, set your own rules, and have a blast.</li>
-    </ul>
-    <p>
-      Each mode got its vibe, so try 'em all and see what fits your style.
-    </p>
-  </section>
+  <h2>Unlock All Champions</h2>
+  <p>As you play, you’ll unlock new skins and gear. Many <strong>1v1 unblocked</strong> versions also offer updates that let you customize your character for a fresh look every time you play.</p>
 
-  <section>
-    <h2>Winning Tips and Battle-Tested Strategies</h2>
-    <p>
-      Want to stop losing to campers or sweat-lords? Here’s how real 1v1.lol legends do it:
-    </p>
-    <ul>
-      <li><b>Build smart, not just fast.</b> Slapping up walls for no reason burns through resources and leaves you wide open.</li>
-      <li><b>Keep your cool when under fire.</b> Don’t panic-build. Stay calm and look for your opening.</li>
-      <li><b>Switch between building and shooting on the fly.</b> The faster you swap, the harder you are to hit and the more pressure you put on your opponent.</li>
-      <li><b>Master different weapons.</b> Some players only spam one gun. Big mistake. Mix it up for best results.</li>
-      <li><b>Use the environment.</b> Duck behind your buildings, ramp up high, and always try to get the high ground.</li>
-      <li><b>Practice in JustBuild or Aim Trainer.</b> Champions aren’t born, they are built, one click at a time.</li>
-    </ul>
-    <p>
-      Remember, there’s no shortcut to getting good practice makes perfect. But these tips should put you a step ahead right out of the gate.
-    </p>
-  </section>
+  <h2>Game Modes</h2>
+  <ul>
+    <li><strong>1v1 Battle Royale</strong> – Outlast your rival in a survival match.</li>
+    <li><strong>Box 1v1</strong> – Practice your building and editing skills.</li>
+    <li><strong>Party Mode</strong> – Play with friends in private lobbies.</li>
+    <li><strong>Competitive Ranked</strong> – Test your skill against global players.</li>
+  </ul>
 
-  <section>
-    <h2>Frequently Asked Questions (FAQ)</h2>
-    <dl>
-      <dt>Is 1v1.lol unblocked legal to play at school?</dt>
-      <dd>
-        It’s not illegal, but it might go against your school’s tech policies. Don’t get yourself in trouble, play during free time, and use safe sites!
-      </dd>
-      <dt>Can I play on my phone?</dt>
-      <dd>
-        Absolutely. 1v1.lol is available on web browsers, Android, and iOS. Just open your browser or download the app from your store.
-      </dd>
-      <dt>What are the best sites for unblocked games?</dt>
-      <dd>
-        Trusted sites like <a href="https://faf-games.github.io" target="_blank">FAF Games</a> are always a safe bet. Stick with well-known platforms to avoid malware or fake games.
-      </dd>
-      <dt>Who created 1v1.lol?</dt>
-      <dd>
-        JustPlay created 1v1.lol, a team known for its fast-paced, competitive games.
-      </dd>
-    </dl>
-  </section>
+  <h2>Features</h2>
+  <ul>
+    <li>Free-to-play browser-based shooter</li>
+    <li>Customizable building controls</li>
+    <li>Multiple unblocked versions like <em>1v1.lol unblocked 66</em> and <em>1v1.lol unblocked 76</em></li>
+    <li>Available on web, iOS, and Android</li>
+    <li>Quick matchmaking for fast action</li>
+  </ul>
 
-  <section>
-    <h2>Ready to Play?</h2>
-    <p>
-      No more waiting around! With this guide, you are all set to play <b>1v1.lol unblocked</b> and maybe even climb the leaderboards. Whether you’re a beginner or a seasoned shooter, there’s always a new trick to learn, a new rival to face, and a new victory to claim.
-    </p>
-    <p>
-      Hungry for more? Check out our <a href="https://faf-games.github.io" target="_blank">unblocked games</a> library for dozens of quick, free games you can play anywhere, anytime.
-    </p>
-  </section>
+  <h2>Controls</h2>
+  <ul>
+    <li>WASD – Move</li>
+    <li>Left Mouse – Shoot/Attack</li>
+    <li>Right Mouse – Aim</li>
+    <li>1-5 – Switch weapons</li>
+    <li>Z, X, C, V – Build structures</li>
+    <li>R – Rotate building piece</li>
+    <li>Space – Jump</li>
+    <li>Shift – Crouch</li>
+  </ul>
+
+  <h2>More Games Like This</h2>
+  <p>If you enjoy <strong>1v1 lol</strong>, check out other unblocked multiplayer shooters and building games such as:</p>
+  <ul>
+    <li><a href="https://faf-games.github.io/game/deadshot-io.html">Deadshot.io</a></li>
+    <li><a href="https://faf-games.github.io/game/bullet-force.html">Bullet Force</a></li>
+    <li><a href="https://faf-games.github.io/game/fortnite.html">Fortnite</a></li>
+  </ul>
+    <p>Want to Play Different instead to 1v1 lol try <a href="https://faf-games.github.io/game/level-devil.html">Level Devil </a>
+
+  <h2>FAQ</h2>
+  <h3>Is 1v1.lol the same as 1v1 LOL?</h3>
+  <p>Yes, both terms mean the same game—whether you type <em>1v1lol</em> or <em>1v1 lol</em>, you’ll get the same fun experience.</p>
+
+  <h3>Can I play 1v1.lol unblocked at school?</h3>
+  <p>Yes! Many students enjoy <strong>1v1.lol unblocked</strong> at school through versions like <em>1v1.lol unblocked 6x</em>, <em>1v1.lol unblocked 76</em>, and more.</p>
+
+  <h3>Can I play 1v1.lol on mobile?</h3>
+  <p>Absolutely. <strong>1v1 lol</strong> is available on iOS and Android devices, so you can play anywhere.</p>
+
+  <h3>What is 1v1 lol GitHub?</h3>
+  <p>Some players host <em>1v1 lol GitHub</em> versions of the game to bypass restrictions, making it easy to access when the main site is blocked.</p>
+
+  <h2>Gameplay Video</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/2T8O4jzFzW8" title="1v1.lol Gameplay" frameborder="0" allowfullscreen></iframe>
+</article>
+
 
     <p>Last updated: May 2025</p>
 </article>
