--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -458,6 +458,24 @@ dl dd {
         .submit-btn:hover {
             background-color: #793202;
         }
+
+  .alt-callout{
+    margin:16px 0;
+    padding:14px 16px;
+    border:1px solid var(--rail-line, #22304a);
+    background:var(--rail-bg, #0f1420);
+    color:var(--rail-text, #dfe7ff);
+    border-radius:12px;
+    display:flex; gap:12px; align-items:center;
+  }
+  .alt-callout .badge{
+    font-size:.8rem; font-weight:700;
+    padding:4px 10px; border-radius:999px;
+    border:1px solid var(--rail-line, #22304a);
+    background:rgba(255,255,255,.06);
+    white-space:nowrap;
+  }
+  .alt-callout a{ font-weight:700; text-decoration:underline; }
             
         </style>
 
@@ -1198,8 +1216,12 @@ dl dd {
     <li><a href="https://faf-games.github.io/game/bullet-force.html">Bullet Force</a></li>
     <li><a href="https://faf-games.github.io/game/fortnite.html">Fortnite</a></li>
   </ul>
-    <p>Want to Play Different instead to 1v1 lol try <a href="https://faf-games.github.io/game/level-devil.html">Level Devil </a>
-
+<div class="alt-callout" role="note" aria-label="Try another game">
+  <span class="badge">Alternative</span>
+  <p>
+	  Want to play something different instead of <b> 1v1 lol</b>? Try <a href="https://faf-games.github.io/game/level-devil.html">Level Devil</a>, it will surprise you at every step.
+  </p>
+</div>
   <h2>FAQ</h2>
   <h3>Is 1v1.lol the same as 1v1 LOL?</h3>
   <p>Yes, both terms mean the same game—whether you type <em>1v1lol</em> or <em>1v1 lol</em>, you’ll get the same fun experience.</p>
