--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1236,7 +1236,7 @@ dl dd {
   <p>Some players host <em>1v1 lol GitHub</em> versions of the game to bypass restrictions, making it easy to access when the main site is blocked.</p>
 
   <h2>Gameplay Video</h2>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/2T8O4jzFzW8" title="1v1.lol Gameplay" frameborder="0" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/watch?v=m5ncYuFT1L4" title="1v1.lol Gameplay" frameborder="0" allowfullscreen></iframe>
 </article>
 
 
