--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1163,85 +1163,88 @@ dl dd {
                       </div>
                   </div>
 
-<article>
 <article class="game-article">
   <h1>1v1 LOL</h1>
-  <p><strong>1v1 lol</strong> is a fast-paced third-person shooter mixed with building mechanics, where you face off against players in intense 1v1 battles. Known for its quick action and strategic building, <strong>1v1.lol</strong> has become one of the most popular <em>unblocked games</em> at school, work, or anywhere. You can even play <strong>1v1 lol unblocked</strong> versions such as <em>1v1.lol unblocked 6x</em>, <em>1v1.lol unblocked 76</em>, and <em>1v1.lol unblocked 66</em>.</p>
 
-  <h2>How to Play 1v1 LOL</h2>
-  <p>To win in <strong>1v1.lol</strong>, you must outsmart your opponent by shooting, building, and surviving. Players can construct walls, ramps, and platforms to defend themselves or gain the upper hand. With reflexes and strategy, every match feels unique. You can also try <em>unblocked 1v1 lol</em> or access it directly from <em>1v1 lol github</em> links if you’re on restricted networks.</p>
+  <p><strong>1v1 lol</strong> is a quick, skill-based shooter where smart building matters as much as good aim. You square off in tight arenas, place ramps and walls on the fly, and try to outplay your opponent in short, high-energy rounds. If your network blocks the main site, many players use school-friendly versions (for example, <em>1v1.lol unblocked 6x</em> or <em>1v1.lol unblocked 76</em>) to keep playing during breaks.</p>
 
-  <h2>Shoot and Build</h2>
-  <p>The game mixes precise shooting with tactical building. Similar to battle royale games, you’ll need to quickly place structures to shield yourself from attacks. Whether you play <em>1v1lol</em> casually or go competitive, learning to balance shooting and building is the key to victory.</p>
+  <h2>Quick Start</h2>
+  <p>Hop in, pick a mode, and queue. Your goal is simple: survive longer than the other player. Build for cover, edit to peek, and take clean shots. On restricted networks, you may see mirrors shared by the community, including open-source builds people discuss on <em>1v1 lol GitHub</em>.</p>
 
-  <h2>Be Tactical and Think Fast</h2>
-  <p>Timing is everything in <strong>1v1</strong> battles. Reacting quickly with the right builds or hitting a perfect shot can make or break your match. That’s why so many students prefer playing <em>unblocked games 1v1 lol</em> during school breaks—it’s quick, intense, and loads of fun.</p>
+  <h2>Core Mechanics</h2>
+  <p>Every match blends two skills: fast gunplay and smart construction. Walls stop pushes; ramps create height; platforms give you space to reset. The best players switch between building and shooting without missing a beat.</p>
 
-  <h2>Unlock All Champions</h2>
-  <p>As you play, you’ll unlock new skins and gear. Many <strong>1v1 unblocked</strong> versions also offer updates that let you customize your character for a fresh look every time you play.</p>
-
-  <h2>Game Modes</h2>
+  <h2>Tips That Actually Help</h2>
   <ul>
-    <li><strong>1v1 Battle Royale</strong> – Outlast your rival in a survival match.</li>
-    <li><strong>Box 1v1</strong> – Practice your building and editing skills.</li>
-    <li><strong>Party Mode</strong> – Play with friends in private lobbies.</li>
-    <li><strong>Competitive Ranked</strong> – Test your skill against global players.</li>
+    <li><strong>Hold height, don’t chase.</strong> Force your rival to waste mats climbing.</li>
+    <li><strong>Edit with intent.</strong> Open a single tile, take the shot, close it back up.</li>
+    <li><strong>Play the timer.</strong> If you’re weak, box up, heal, and re-engage on your terms.</li>
+    <li><strong>Warm up in boxes.</strong> Short box fights sharpen aim and edits before ranked.</li>
   </ul>
 
-  <h2>Features</h2>
+  <h2>Modes You Can Jump Into</h2>
   <ul>
-    <li>Free-to-play browser-based shooter</li>
-    <li>Customizable building controls</li>
-    <li>Multiple unblocked versions like <em>1v1.lol unblocked 66</em> and <em>1v1.lol unblocked 76</em></li>
-    <li>Available on web, iOS, and Android</li>
-    <li>Quick matchmaking for fast action</li>
+    <li><strong>Duel (1v1)</strong> – Pure, fast rounds that test aim and building.</li>
+    <li><strong>Box Fights</strong> – Close-quarters practice that improves edits under pressure.</li>
+    <li><strong>Party Lobbies</strong> – Create a room and invite friends.</li>
+    <li><strong>Ranked</strong> – Climb ladders and face tougher opponents.</li>
   </ul>
 
-  <h2>Controls</h2>
+  <h2>What Makes It Fun</h2>
   <ul>
-    <li>WASD – Move</li>
-    <li>Left Mouse – Shoot/Attack</li>
-    <li>Right Mouse – Aim</li>
-    <li>1-5 – Switch weapons</li>
-    <li>Z, X, C, V – Build structures</li>
-    <li>R – Rotate building piece</li>
-    <li>Space – Jump</li>
-    <li>Shift – Crouch</li>
+    <li>Runs in the browser—no downloads needed.</li>
+    <li>Snappy matchmaking and low match times.</li>
+    <li>Custom keybinds and flexible build controls.</li>
+    <li>Works on web and mobile; many students use <em>1v1 lol unblocked</em> options at school.</li>
+    <li>Plenty of community mirrors (sometimes called <em>unblocked games 1v1 lol</em> or <em>unblocked 1v1 lol</em>) when the main site is filtered.</li>
   </ul>
 
-  <h2>More Games Like This</h2>
-  <p>If you enjoy <strong>1v1 lol</strong>, check out other unblocked multiplayer shooters and building games such as:</p>
+  <h2>Controls at a Glance</h2>
+  <ul>
+    <li><strong>WASD</strong> – Move</li>
+    <li><strong>Left Click</strong> – Shoot / Confirm edit</li>
+    <li><strong>Right Click</strong> – Aim / Reset edit</li>
+    <li><strong>1–5</strong> – Weapons & tools</li>
+    <li><strong>Z / X / C / V</strong> – Build pieces</li>
+    <li><strong>R</strong> – Rotate piece</li>
+    <li><strong>Space</strong> – Jump</li>
+    <li><strong>Shift</strong> – Crouch</li>
+  </ul>
+
+  <h2>Try These Next</h2>
+  <p>Like short, sweaty duels? Give these a go:</p>
   <ul>
     <li><a href="https://faf-games.github.io/game/deadshot-io.html">Deadshot.io</a></li>
     <li><a href="https://faf-games.github.io/game/bullet-force.html">Bullet Force</a></li>
     <li><a href="https://faf-games.github.io/game/fortnite.html">Fortnite</a></li>
   </ul>
+
 <div class="alt-callout" role="note" aria-label="Try another game">
   <span class="badge">Alternative</span>
   <p>
-	  Want to play something different instead of <b> 1v1 lol</b>? Try <a href="https://faf-games.github.io/game/level-devil.html">Level Devil</a>, it will surprise you at every step.
+   Want to play something different instead of 1v1 lol? Try <a href="https://faf-games.github.io/game/level-devil.html">Level Devil</a>, it will surprise you at every step.
   </p>
 </div>
+
   <h2>FAQ</h2>
   <h3>Is 1v1.lol the same as 1v1 LOL?</h3>
-  <p>Yes, both terms mean the same game—whether you type <em>1v1lol</em> or <em>1v1 lol</em>, you’ll get the same fun experience.</p>
+  <p>Yep. People type it both ways. It’s the same game and the same modes.</p>
 
-  <h3>Can I play 1v1.lol unblocked at school?</h3>
-  <p>Yes! Many students enjoy <strong>1v1.lol unblocked</strong> at school through versions like <em>1v1.lol unblocked 6x</em>, <em>1v1.lol unblocked 76</em>, and more.</p>
+  <h3>Can I play at school?</h3>
+  <p>Often, yes. Many schools allow mirror links like <em>1v1.lol unblocked 6x</em> or regional versions such as <em>1v1.lol unblocked 66</em>. Always follow your school’s rules.</p>
 
-  <h3>Can I play 1v1.lol on mobile?</h3>
-  <p>Absolutely. <strong>1v1 lol</strong> is available on iOS and Android devices, so you can play anywhere.</p>
+  <h3>Does it work on phones?</h3>
+  <p>It does. The mobile version is solid for casual play, though building is usually easier on keyboard and mouse.</p>
 
-  <h3>What is 1v1 lol GitHub?</h3>
-  <p>Some players host <em>1v1 lol GitHub</em> versions of the game to bypass restrictions, making it easy to access when the main site is blocked.</p>
+  <h3>What about “1v1lol” or “1v1 unblocked” I see online?</h3>
+  <p>Those are just common ways players refer to the game or to school-friendly mirrors. Stick to trusted sources.</p>
 
   <h2>Gameplay Video</h2>
-  <iframe width="560" height="315" src="https://www.youtube.com/watch?v=m5ncYuFT1L4" title="1v1.lol Gameplay" frameborder="0" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/m5ncYuFT1L4" title="1v1.lol Gameplay" frameborder="0" allowfullscreen></iframe>
+
+  <p>Last updated: August 2025</p>
 </article>
 
-
-    <p>Last updated: August 2025</p>
-</article>
 					
 			
               </div>
