--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1179,7 +1179,7 @@ dl dd {
     <li><strong>Hold height, don’t chase.</strong> Force your rival to waste mats climbing.</li>
     <li><strong>Edit with intent.</strong> Open a single tile, take the shot, close it back up.</li>
     <li><strong>Play the timer.</strong> If you’re weak, box up, heal, and re-engage on your terms.</li>
-    <li><strong>Warm up in boxes.</strong> Short box fights sharpen aim and edits before ranked.</li>
+    <li><strong>Warm up in boxes.</strong> Short box fights sharpen aim and edits before being ranked.</li>
   </ul>
 
   <h2>Modes You Can Jump Into</h2>
@@ -1192,11 +1192,11 @@ dl dd {
 
   <h2>What Makes It Fun</h2>
   <ul>
-    <li>Runs in the browser—no downloads needed.</li>
+    <li>Runs in the browser, no downloads needed.</li>
     <li>Snappy matchmaking and low match times.</li>
     <li>Custom keybinds and flexible build controls.</li>
     <li>Works on web and mobile; many students use <em>1v1 lol unblocked</em> options at school.</li>
-    <li>Plenty of community mirrors (sometimes called <em>unblocked games 1v1 lol</em> or <em>unblocked 1v1 lol</em>) when the main site is filtered.</li>
+    <li>Plenty of community mirrors (sometimes called <em><a href="https://faf-games.github.io">Unblocked Games</a> 1v1 lol</em> or <em>unblocked 1v1 lol</em>) when the main site is filtered.</li>
   </ul>
 
   <h2>Controls at a Glance</h2>
