--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -734,12 +734,12 @@ dl dd {
 <div class="games-item desktop">
     <div class="games-single-item img-contain-isotope">
         <div class="games-thumb">
-            <a href="https://6x-classroom.io/game/1v1-lol.html" target="_blank" rel="noopener noreferrer">
+            <a href="https://1v1-lol-online.bitbucket.io" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/img/1v1.lol/logo.webp" alt="Server 5" title="Server 5" />
             </a>
         </div>
         <div class="games-desc">
-            <h2><a href="https://6x-classroom.io/game/1v1-lol.html" target="_blank" rel="noopener noreferrer">Server 5</a></h2>
+            <h2><a href="https://1v1-lol-online.bitbucket.io" target="_blank" rel="noopener noreferrer">Server 5</a></h2>
             <p class="game-meta">1v1.lol Unblocked</p>
         </div>
     </div>
