--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <nav class="fag-header navbar navbar-expand-lg">
         <div class="container">
            
-            <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="site logo" /></a>
+            <a class="navbar-brand" href="/"><img src="assets/img/logo.png" alt="site logo" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="menu-toggle"></span>
             </button>
@@ -225,7 +225,7 @@
             <a href="https://docs.google.com/document/d/1sgC0ADkCZnb6yViUYuqt1zyR7gdERMFJovSb_svO4VU/edit?usp=sharing" target="_blank" rel="noopener noreferrer class="nav-link">Alt Links</a>
         </li>
         <li class="nav-item active">
-            <a href="index.html" class="nav-link">Home</a>
+            <a href="/" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
             <a href="action/index.html" class="nav-link">Action</a>
@@ -237,7 +237,7 @@
             <a href="bike/index.html" class="nav-link">Bike</a>
         </li>        
 	    <li class="nav-item">
-            <a href="game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
+            <a href="game/1v1-lol" class="nav-link">1v1.lol Unblocked</a>
         </li>
 	      
         <!-- More Dropdown -->
@@ -1394,7 +1394,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
                     <div class="col-12">
                         <div class="footer-bottom-inn">
                             <div class="footer-logo">
-                                <a href="index.html">
+                                <a href="/">
                                     <img src="assets/img/logo.png" alt="site logo" />
                                 </a>
                             </div>
