--- a/game/eggy-car.html
+++ b/game/eggy-car.html
@@ -5,7 +5,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="Play Eggy Car Unblocked for free! Enjoy this fun, challenging game where you balance an egg on a moving car. No downloads or sign-ups required – play anywhere, anytime!">    
+      <meta name="description" content=" Eggy Car for free! Enjoy this fun, challenging game where you balance an egg on a moving car. No downloads or sign-ups required, play anywhere, anytime!">    
       <meta name="keywords" content="Eggy Car, Eggy Car game, Eggy Car unblocked, Eggy Car online, play Eggy Car, Eggy Car free, Eggy Car no download, Eggy Car school, Eggy Car for kids, Eggy Car without ads, Eggy Car fun game, Eggy Car balancing game, Eggy Car tips, Eggy Car tricks, how to play Eggy Car, Eggy Car guide, Eggy Car challenges, Eggy Car reflex game, Eggy Car mobile, Eggy Car driving game, Eggy Car arcade game">
 
       <meta name="author" content="FAF Games Team">
@@ -1240,24 +1240,24 @@
          </div>
       </section>
 
-	    <h2>Eggy Car Unblocked: Can You Keep the Egg Safe?</h2>&nbsp;
+	    <h2>Eggy Car: Keep the Egg Safe?</h2>&nbsp;
 
-    <p>Are you looking for a game that is both simple and ridiculously fun, Eggy Car is perfect for you. But what happens when you can’t access it at school or work? That is where Eggy Car Unblocked comes in. Now you can play without any restrictions, enjoying the challenge of balancing an egg on a moving  <a href="https://faf-games.github.io/car/index.html">Car</a>, no matter where you are!</p>
+    <p>Are you looking for a game that is both simple and ridiculously fun? Eggy Car is perfect for you. But what happens when you can’t access it at school or work? That is where <a href="htps://eggy-car-unblocked.github.io.html">"Eggy Car Unblocked"</a> comes in. Now you can play without any restrictions, enjoying the challenge of balancing an egg on a moving  <a href="https://faf-games.github.io/car/index.html">Car</a>, no matter where you are!</p>
 
     <h2>What is Eggy Car?</h2>&nbsp;
     <p>Eggy Car is a fun little game where you drive a car over tricky hills while trying to keep an egg balanced on top. Sounds easy, right? Well, not exactly! Every bump and dip in the road makes the egg wobble, and if it falls off, game over. The goal is to drive as far as possible without letting the egg crack, which is a lot harder than it seems.</p>
 
     <p>It’s the kind of game that’s easy to pick up but hard to master—perfect for short breaks or when you want to challenge your reflexes.</p>
 
-    <h2>Why Play Eggy Car Unblocked?</h2>&nbsp;
-    <p>Many students and office workers love playing Eggy Car, but sometimes the game gets blocked on school or work networks. With Eggy Car unblocked, you can enjoy the game no matter where you are. Whether you’re on your school computer or trying to sneak in some fun during lunch at work, an <a href="https://faf-games.github.io">Unblocked Games</a> allows you to play hassle-free.</p>
+    <h2>Why Play Eggy Car on FAF Games?</h2>&nbsp;
+    <p>Many students and office workers love playing Eggy Car, but sometimes the game gets blocked on school or work networks. With Eggy Car on faf games, you can enjoy the game no matter where you are. Whether you’re on your school computer or trying to sneak in some fun during lunch at work, an <a href="https://faf-games.github.io">FAF Games</a> allows you to play hassle-free.</p>
 
     <p>Unblocked versions of Eggy Car are hosted on gaming websites that bypass typical network restrictions, making it super easy to start playing.</p>
 
-    <h2>How to Play Eggy Car Unblocked</h2>&nbsp;
-    <p>Here’s a simple guide to start playing Eggy Car unblocked:</p>
+    <h2>How to Play Eggy Car?</h2>&nbsp;
+    <p>Here is a simple guide to start playing Eggy Car:</p>
     <ul>
-        <li><strong>Find an  Unblocked Website:</strong> Search for <a href="https://faf-games.github.io/game/eggy-car.html">"Eggy Car Unblocked"</a> on Google. You will find several gaming sites that host the game.</li>
+        <li><strong>Find an  Unblocked Website:</strong> Search for <a href="https://faf-games.github.io/game/eggy-car.html">"Eggy Car on FAF Games"</a> on Google. You will find several gaming sites that host the game.</li>
         <li><strong>Start the Game:</strong> Once the site loads, click to start driving. The goal is to keep the egg from falling while navigating through hills and bumps.</li>
         <li><strong>Drive Carefully:</strong> Use the arrow keys to control the car’s speed. It’s all about finding the right balance between going fast enough to climb the hills but slow enough to keep the egg steady.</li>
     </ul>
