--- a/game/eggy-car.html
+++ b/game/eggy-car.html
@@ -1240,7 +1240,7 @@
 
 			  <h2>Eggy Car: Keep the Egg Safe?</h2>&nbsp;
 
-    <p>Are you looking for a game that is both simple and ridiculously fun? Eggy Car is perfect for you. But what happens when you can’t access it at school or work? That is where <a href="htps://eggy-car-unblocked.github.io.html">"Eggy Car Unblocked"</a> comes in. Now you can play without any restrictions, enjoying the challenge of balancing an egg on a moving  <a href="https://faf-games.github.io/car/index.html">Car</a>, no matter where you are!</p>
+    <p>Are you looking for a game that is both simple and ridiculously fun? Eggy Car is perfect for you. But what happens when you can’t access it at school or work? That is where <a href="https://eggy-car-unblocked.github.io">"Eggy Car Unblocked"</a> comes in. Now you can play without any restrictions, enjoying the challenge of balancing an egg on a moving  <a href="https://faf-games.github.io/car/index.html">Car</a>, no matter where you are!</p>
 
     <h2>What is Eggy Car?</h2>&nbsp;
     <p>Eggy Car is a fun little game where you drive a car over tricky hills while trying to keep an egg balanced on top. Sounds easy, right? Well, not exactly! Every bump and dip in the road makes the egg wobble, and if it falls off, game over. The goal is to drive as far as possible without letting the egg crack, which is a lot harder than it seems.</p>
