--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -5,9 +5,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>1v1.lol | FAF Games</title>
-        <meta name="description" content="1v1.lol is a fast-paced shooter where you build and fight in real time. Play official battle royale, box fights, and more—no download needed!">
-        <meta name="title" content="1v1.LOL">
+        <title>1v1 lol | FAF Games</title>
+        <meta name="description" content=" Play 1v1 LOL official version on Faf Games. It is a fast-paced shooter, with battles, box fights, and battle royale online free, perfect for Chromebook gaming, no download needed!">
+        <meta name="title" content="1v1 LOL">
         <meta name="keywords" content="1v1 lol unblocked, 1v1 sites, 1v1unblocked, lol.1v1 unblocked, 1v1 lol sites, 1v1. lol unblocked, 1vs1 lol unblocked, v1.lol unblocked google sites, 1v1 lol google sites, lol 1v1 unblocked, 1v1 lol unblocked 66, 1v1 lol unblocked games, 1v1lol unblocked, 1v1 unblocked, 1v1.lol unblocked games, 1v1.unblocked, https //1v1.lol unblocked, 1v1.lol unblocked 77, 1v1lolunblocked, 1v1 tennis unblocked, 1v1 sites">
         <meta name="news_keywords" content="1v1.lol unblocked, 1v1 lol 66, 1v1 lol Unblocked Games, 1v1.lol hacks, 1v1.lol alternative, 1v1 lol 76, 1v1 lol unblocked 911, 1v1.lol aimbot, 1v1 lol poki, 1v1.lol Unblocked, 1v1 Unblocked ">
         <meta name="author" content="FAF Games Team">
@@ -488,7 +488,7 @@
         <section class="pb-120 mt-minus-300">
           <div class="container">
 		  <div class="article-header">
-        <h1>1v1.LOL </h1>
+        <h1>1v1 LOL </h1>
     </div>
             <div class="row justify-content-center">
               <div class="col-lg-12">
