--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1056,12 +1056,13 @@ dl dd {
 <article class="game-article">
   <p><strong>1v1 lol</strong> is a quick, skill-based shooter where smart building matters as much as good aim. You square off in tight arenas, place ramps and walls on the fly, and try to outplay your opponent in short, high-energy rounds. If your network blocks the main site, many players use school-friendly versions (for example, <em>1v1.lol unblocked 6x</em> or <em>1v1.lol unblocked 76</em>) to keep playing during breaks.</p>
 
-  <h2>Quick Start</h2>
-  <p>Hop in, pick a mode, and queue. Your goal is simple: survive longer than the other player. Build for cover, edit to peek, and take clean shots. On restricted networks, you may see mirrors shared by the community, including open-source builds people discuss on <em>1v1 lol GitHub</em>.</p>
-
-  <h2>Core Mechanics</h2>
-  <p>Every match blends two skills: fast gunplay and smart construction. Walls stop pushes; ramps create height; platforms give you space to reset. The best players switch between building and shooting without missing a beat.</p>
-
+<h2>How to Play 1v1 LOL</h2>
+<p>
+  Jump into the game, pick a mode, and try to outlast your opponent. Use building to defend yourself, edit structures for quick peeks, and take precise shots. 
+  On school or restricted networks, you can also play the official 1v1.LOL unblocked version on  <a href="https://faf-games.github.io/" target="_blank">FaF Games</a> for free, with no downloads required.
+</p>
+   <h2>Game Mechanics Explained</h2>
+   <p>1v1 LOL mixes shooting with fast building. Walls block enemy pushes, ramps give you height, and platforms let you reset. The best players balance combat and construction seamlessly for nonstop action.</p>
   <h2>Tips That Actually Help</h2>
   <ul>
     <li><strong>Hold height, don’t chase.</strong> Force your rival to waste mats climbing.</li>
