--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1059,7 +1059,7 @@ dl dd {
 <h2>How to Play 1v1 LOL</h2>
 <p>
   Jump into the game, pick a mode, and try to outlast your opponent. Use building to defend yourself, edit structures for quick peeks, and take precise shots. 
-  On school or restricted networks, you can also play the official 1v1.LOL unblocked version on  <a href="https://faf-games.github.io/" target="_blank">FaF Games</a> for free, with no downloads required.
+  On school or restricted networks, you can also play the <a href="https://faf-games.github.io/1v1-lol-official.html" target="_blank">1v1.LOL Official</a> version on  <a href="https://faf-games.github.io/" target="_blank">FaF Games</a> for free, with no downloads required.
 </p>
    <h2>Game Mechanics Explained</h2>
    <p>1v1 LOL mixes shooting with fast building. Walls block enemy pushes, ramps give you height, and platforms let you reset. The best players balance combat and construction seamlessly for nonstop action.</p>
@@ -1079,14 +1079,7 @@ dl dd {
     <li><strong>Ranked</strong> – Climb ladders and face tougher opponents.</li>
   </ul>
 
-  <h2>What Makes It Fun</h2>
-  <ul>
-    <li>Runs in the browser, no downloads needed.</li>
-    <li>Snappy matchmaking and low match times.</li>
-    <li>Custom keybinds and flexible build controls.</li>
-    <li>Works on web and mobile; many students use <em>1v1 lol unblocked</em> options at school.</li>
-    <li>Plenty of community mirrors (sometimes called <em><a href="https://faf-games.github.io">Unblocked Games</a> 1v1 lol</em> or <em>unblocked 1v1 lol</em>) when the main site is filtered.</li>
-  </ul>
+ 
 
   <h2>Controls at a Glance</h2>
   <ul>
